lustre/utils/wirecheck.c
@@ -1988,7 +1988,9 @@ check_posix_acl_xattr_header(void)
 	printf("#ifdef CONFIG_FS_POSIX_ACL\n");
 	CHECK_STRUCT_TYPEDEF(posix_acl_xattr_header);
 	CHECK_MEMBER_TYPEDEF(posix_acl_xattr_header, a_version);
+	printf("#ifndef HAVE_STRUCT_POSIX_ACL_XATTR\n");
 	CHECK_MEMBER_TYPEDEF(posix_acl_xattr_header, a_entries);
+	printf("#endif /* HAVE_STRUCT_POSIX_ACL_XATTR */\n");
 	printf("#endif /* CONFIG_FS_POSIX_ACL */\n");
 }
 
